<resources>
    <string name="app_name">GeneralIntentExample</string>
    <string name="name">Name</string>
    <string name="enter_name">Please enter your name</string>
    <string name="mail_adress">E-Mail</string>
    <string name="enter_mail_adress">Receiver mail adress</string>
    <string name="subject">Subject</string>
    <string name="enter_subject">Enter mail subject</string>
    <string name="content">Mail Content</string>
    <string name="enter_content">Please write your mail</string>
    <string name="send">Send Mail</string>
</resources>
