<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="studyjam.example.generalintentexample.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/name"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_name"
            android:id="@+id/name"
            android:textColorHint="@color/colorAccent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/mail_adress"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_mail_adress"
            android:id="@+id/mail_adress"
            android:textColorHint="@color/colorAccent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/subject"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_subject"
            android:id="@+id/subject_text"
            android:textColorHint="@color/colorAccent"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/content"
            android:gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_content"
            android:id="@+id/mail_content"
            android:textColorHint="@color/colorAccent"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:onClick="send"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@android:color/holo_blue_bright"/>


    </LinearLayout>

</ScrollView>
